--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I Love You</title>
-    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./ic on.png" type="image/x-icon">
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,16 +16,16 @@
     <div id="drag-container">
         <div id="spin-container">
           <img src="./img/img1.jpg" alt="">
+          <img src="./img/img2.jpg" alt="">
           <img src="./img/img3.jpg" alt="">
+          <img src="./img/img4.jpg" alt="">
           <img src="./img/img5.jpg" alt="">
-          <img src="./img/img1.jpg" alt="">
-          <img src="./img/img7.jpg" alt="">
           <img src="./img/img6.jpg" alt="">
           <img src="./img/img7.jpg" alt="">
           <img src="./img/img2.jpg" alt="">
           
             <p>
-              GửiEm
+              DànhchoDịu
              </p>
         
         </div>
@@ -36,7 +36,7 @@
       <div id="canva">
       <canvas id="canvas"></canvas>
     </div>
-    <audio src="music.mp3" autoplay loop></audio>
+    <audio src="./img/music.mp3" autoplay loop></audio>
     <script src="main.js"></script>
 </body>
 </html>
